Preventing captions from wrapping

--- a/docs/static/mccole.css
+++ b/docs/static/mccole.css
@@ -80,6 +80,11 @@ figure {
     text-align: center;
 }
 
+figcaption {
+    font-weight: bold;
+    white-space: nowrap;
+}
+
 /* Footer */
 footer {
     text-align: center;
@@ -167,6 +172,7 @@ tbody tr:nth-child(odd) td {
 
 caption {
     font-weight: bold;
+    white-space: nowrap;
 }
 
 /* Table of contents */
